--- a/basic-mapping/age-index-mapping.ipynb
+++ b/basic-mapping/age-index-mapping.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +28,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **GEO 441B Week 2: Data Model and More Mapping**"
+        "# **Querying Vector Data Tables**\n",
+        "\n"
       ],
       "metadata": {
         "id": "C0ymCPR5aSHN"
@@ -51,7 +51,7 @@
       "source": [
         "## **Get ready to start**\n",
         "\n",
-        "- Click **`File/Save a copy in Drive`** to save a copy of this notebook to my own Google Drive"
+        "- Click **`File/Save a copy in Drive`** to save a copy of this notebook to your own Google Drive"
       ],
       "metadata": {
         "id": "CMQN_pgaHVLO"
@@ -60,7 +60,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Adding multiple map frames to one layout**\n"
+        "##**Part 1: Oldsters Map**\n"
       ],
       "metadata": {
         "id": "WVs4J1jQbESU"
@@ -69,87 +69,109 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###**Map with multiple map frames**\n",
-        "\n",
-        "- Below is a map with **two map frames** prepared following the Assignment #2 Guide\n",
+        "Below is a map of high age-index U.S. counties prepared following the Week 5 Assignment Guide.\n",
         "\n",
         "```markdown\n",
-        "[https://drive.google.com/file/d/1i36P9HEACK4HLn_gxm2GRr6D_oIYl2hH/view?usp=sharing]\n",
+        "[https://drive.google.com/file/d/1vkWRpdsUroO77YfPVL0Tsa25c6CymyW9/view?usp=sharing]\n",
         "```\n",
         "\n",
-        "- Create a viewable link of the map.\n",
-        "  - Delete **`/view?usp=sharing`** at the end of the link\n",
-        "  - Replace **`/file/d/`** with **`/uc?export=view&id=`**\n",
+        "Create a viewable link of the map.\n",
+        "- Delete `/view?usp=sharing`at the end of the link\n",
+        "- Replace `/file/d/` with `/uc?export=view&id=`\n",
+        "\n",
         "\n",
         "```markdown\n",
-        "[https://drive.google.com/uc?export=view&id=1i36P9HEACK4HLn_gxm2GRr6D_oIYl2hH]\n",
+        "[https://drive.google.com/uc?export=view&id=1vkWRpdsUroO77YfPVL0Tsa25c6CymyW9]\n",
         "```\n",
         "\n",
-        " **Embed the map**\n",
+        "Reminder of the rendering syntax:\n",
+        "```markdown\n",
+        "![oldsters map](https://drive.google.com/uc?export=view&id=1vkWRpdsUroO77YfPVL0Tsa25c6CymyW9)\n",
+        "```\n",
         "\n",
-        "\n",
-        "Now, <mark>embed your map using the adjusted link by replacing the placeholder below</mark>:\n",
-        "\n",
-        "![Cloquet 2 maps](https://drive.google.com/uc?export=view&id=1i36P9HEACK4HLn_gxm2GRr6D_oIYl2hH)\n"
+        "<mark>Insert the map below:</mark>\n",
+        "![oldsters map](https://drive.google.com/uc?export=view&id=1vkWRpdsUroO77YfPVL0Tsa25c6CymyW9)"
       ],
       "metadata": {
         "id": "wkJqun7umRRk"
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "IpTaiz_sFfe9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "##**Part 2: Table Join**"
+      ],
       "metadata": {
-        "id": "1kPZP9SzFevc"
+        "id": "5M6ky8PkMyO4"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "##**Create a geodatabase in ArcGIS Pro**\n",
+        "Below is a screenshot of selected records in a joined table prepared following the Week 5 Assignment Guide.\n",
         "\n",
-        "- Follow directions in the assignment guide to create a new geodatabase and feature dataset using ArcGIS Pro.\n",
         "\n",
-        "- Insert a screenshot of the content of the newly created geodatabase below. Directions for screenshotting and embedding:\n",
-        "  - [Taking a screenshot in Windows PC](https://www.cnet.com/tech/computing/need-to-take-a-screenshot-with-windows-11-heres-how/)\n",
-        "  - [Taking a screenshot in macOS](https://support.apple.com/en-us/102646#:~:text=How%20to%20take%20a%20screenshot,it%20to%20edit%20the%20screenshot.)\n",
-        "    - Mac users: if you are using remote access to finish this step, please follow the directions of taking a screenshot in macOS to obtain your screenshot\n",
-        "- Follow the directions in the previous section to obtain a shareable link from Google Drive and adjust it into a publishable format for Google Colab\n",
+        "```markdown\n",
+        "[https://drive.google.com/file/d/1wsQ9VUglu5-2wQuxGFSM1zLC7DnFDOfK/view?usp=sharing]\n",
+        "```\n",
         "\n",
-        "![Data set SS](https://drive.google.com/uc?export=view&id=1FpeQpDfPjapgNB6d4XR_cwPOc0I8Ypl8)</mark>"
+        "Create a viewable link of the map.\n",
+        "- Delete `/view?usp=sharing`at the end of the link\n",
+        "- Replace `/file/d/` with `/uc?export=view&id=`\n",
+        "\n",
+        "\n",
+        "```markdown\n",
+        "[https://drive.google.com/uc?export=view&id=1wsQ9VUglu5-2wQuxGFSM1zLC7DnFDOfK]\n",
+        "```\n",
+        "\n",
+        "Reminder of the rendering syntax:\n",
+        "```markdown\n",
+        "![selected records](https://drive.google.com/uc?export=view&id=1wsQ9VUglu5-2wQuxGFSM1zLC7DnFDOfK)\n",
+        "```\n",
+        "\n",
+        "<mark>Insert the screenshot below:</mark>\n",
+        "![selected records](https://drive.google.com/uc?export=view&id=1wsQ9VUglu5-2wQuxGFSM1zLC7DnFDOfK)"
       ],
       "metadata": {
-        "id": "Y1LEwJhSmiRU"
+        "id": "rFCQebMnMtFX"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## **Reflection on data models and management in ArcGIS Pro**\n",
-        "\n",
-        "- **Write a 100-word paragraph which describes the relationship between**\n",
-        "  - a **`Geodatabase`**\n",
-        "  - a **`Feature Dataset`**\n",
-        "  - and **`Feature Classes`**\n",
-        "\n",
-        "\n",
-        "  Refer to **Page 9** of the assignment guide, and other resources online such as:\n",
-        "    - [Fundamentals of the geodatabase](https://pro.arcgis.com/en/pro-app/latest/help/data/geodatabases/overview/fundamentals-of-the-geodatabase.htm)\n",
-        "    - [Feature datasets in ArcGIS Pro](https://pro.arcgis.com/en/pro-app/latest/help/data/feature-datasets/feature-datasets-in-arcgis-pro.htm)\n",
-        "\n",
-        "<mark>[  A Geodatabase is used to organize data that is used together or complex data. Within this data base there is a Featured Dataset that is a collection of related spatical data, which is diffrent layers normally. there are several of these in the data base usually. When you want to hold multiple layers together you do this within a Featured class. The geodatabase is the conatianer, featured dataset is is the sub group, and featured class is a layer of data. ]</mark>\n"
+        "##**Part 3: Soil Fertility Map**"
       ],
       "metadata": {
-        "id": "i4RTLellbUh7"
+        "id": "WxQaTtqECjyF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Below is a map of soil fertility prepared following the Week 5 Assignment Guide.\n",
+        "\n",
+        "```markdown\n",
+        "[https://drive.google.com/file/d/1aNL0KgJb5D9MqiCHAljiaxg8X2dpk7i9/view?usp=sharing]\n",
+        "```\n",
+        "\n",
+        "Create a viewable link of the map.\n",
+        "- Delete `/view?usp=sharing`at the end of the link\n",
+        "- Replace `/file/d/` with `/uc?export=view&id=`\n",
+        "\n",
+        "\n",
+        "```markdown\n",
+        "[https://drive.google.com/uc?export=view&id=1aNL0KgJb5D9MqiCHAljiaxg8X2dpk7i9]```\n",
+        "\n",
+        "Reminder of the rendering syntax:\n",
+        "```markdown\n",
+        "![soil fertility map](https://drive.google.com/uc?export=view&id=1aNL0KgJb5D9MqiCHAljiaxg8X2dpk7i9)\n",
+        "```\n",
+        "\n",
+        "<mark>Insert the map below:</mark>\n",
+        "![soil fertility map](https://drive.google.com/uc?export=view&id=1aNL0KgJb5D9MqiCHAljiaxg8X2dpk7i9)"
+      ],
+      "metadata": {
+        "id": "rEkh2rArCg3n"
       }
     },
     {
@@ -157,7 +179,7 @@
       "source": [
         "## **Save and share this notebook**\n",
         "\n",
-        "Make sure the notebook is viewable by anyone with the link, then <mark>**submit the shareable link to Canvas for the Week 2 assignment.**</mark>"
+        "Make sure that your images are all rendering and then share the notebook so that it is viewable by anyone with the link. <mark>**Submit the shareable link to Canvas for the Week 5 Assignment.**</mark>"
       ],
       "metadata": {
         "id": "kkgukjDcXsqC"
@@ -167,7 +189,7 @@
       "cell_type": "markdown",
       "source": [
         "## **References**\n",
-        "- [Markdown cheat sheet](https://www.markdownguide.org/cheat-sheet/)"
+        "- [Markdown cheat sheet](https://www.markdownguide.org/cheat-sheet/)\n"
       ],
       "metadata": {
         "id": "fvMbEX89YLeY"
